--- a/_posts/2019-10-21-fanzine-jam-#1.html
+++ b/_posts/2019-10-21-fanzine-jam-#1.html
@@ -1,14 +1,11 @@
 ---
 number: 1
-layout: post
+layout: default
 preview : assets/fanzine/1/FANZINEJAM_WEB_1.jpg
 date: 2019-10-21 14:29:06 +0200
 categories: fanzine
 ---
-{% assign min = 1 %}
-{% assign max = 12 %}
-{% assign diff = max | minus: min %}
 {% for index in (1..86) %}
-	{% assign randomNumber = "now" | date: "%N" | modulo: diff | plus: min %}
-	<div class="page rotate{{ randomNumber }}"><img src="{{ site.url }}/assets/fanzine/1/FANZINEJAM_WEB_{{ index }}.jpg"></div>
+	<div class="col-12 col-sm-12 col-md-6 col-lg-4 page"><img src="{{ site.url }}/assets/fanzine/1/FANZINEJAM_WEB_{{ index }}.jpg"></div>
 {% endfor %}
+
