--- a/_posts/2019-10-21-fanzine-jam-#6.html
+++ b/_posts/2019-10-21-fanzine-jam-#6.html
@@ -1,14 +1,10 @@
 ---
 number: 6
-layout: post
+layout: default
 preview: assets/fanzine/6/1.jpg
 date: 2019-10-21 16:29:06 +0200
 categories: fanzine
 ---
-{% assign min = 1 %}
-{% assign max = 12 %}
-{% assign diff = max | minus: min %}
 {% for index in (1..84) %}
-	{% assign randomNumber = "now" | date: "%N" | modulo: diff | plus: min %}
-	<div class="page rotate{{ randomNumber }}"><img src="{{ site.url }}/assets/fanzine/6/{{ index }}.jpg"></div>
+	<div class="col-12 col-sm-12 col-md-6 col-lg-4 page"><img src="{{ site.url }}/assets/fanzine/6/{{ index }}.jpg"></div>
 {% endfor %}
