--- a/index.html
+++ b/index.html
@@ -2,19 +2,11 @@
 layout: default
 title: Fanzine Jam
 ---
-{% assign min = 1 %}
-{% assign max = 12 %}
-{% assign diff = max | minus: min %}
-<div class="home">
-	<ul>
-		{% for post in site.posts reversed %}
-		{% assign randomNumber = "now" | date: "%N" | modulo: diff | plus: min %}
-		<li class="preview rotate{{ randomNumber }}">
-			<a href="{{ post.url }}">
-				<img src="{{ site.url }}/{{ post.preview }}">
-				<div class="pastille"><div class="number">#{{ post.number }}</div></div>
-			</a>
-		</li>
-		{% endfor %}
-	</ul>
+{% for post in site.posts reversed %}
+<div class="col-12 col-sm-6 col-md-6 col-lg-4 preview">
+	<a href="{{ post.url }}">
+		<img src="{{ site.url }}/{{ post.preview }}">
+		<div class="pastille"><div class="number">#{{ post.number }}</div></div>
+	</a>
 </div>
+{% endfor %}
